fixed logos on mobile

--- a/css/_logos.sass
+++ b/css/_logos.sass
@@ -8,6 +8,9 @@
 		margin: 0 auto
 		padding: 10px
 
+		@media screen and (max-width: 480px)
+			width: 100%
+
 	@media screen and (min-width: 768px) and (max-width:979px)
 		height: auto
 		width: 100%	
@@ -15,4 +18,3 @@
 	@media screen and (max-width: 480px)
 		height: auto
 		padding: 10px
-		width: 100%
