--- a/css/style.css
+++ b/css/style.css
@@ -249,6 +249,9 @@ header {
     width: 75%;
     margin: 0 auto;
     padding: 10px; }
+    @media screen and (max-width: 480px) {
+      .logos img {
+        width: 100%; } }
   @media screen and (min-width: 768px) and (max-width: 979px) {
     .logos {
       height: auto;
@@ -256,8 +259,7 @@ header {
   @media screen and (max-width: 480px) {
     .logos {
       height: auto;
-      padding: 10px;
-      width: 100%; } }
+      padding: 10px; } }
 
 .featured-artist {
   background: url("../saint-sister.jpg");
